# o2-scalpel

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  marketplace.json  marketplace.surface.json  pyrightconfig.json
.claude-plugin/: marketplace.json
.planning/: .continue-here.md  HANDOFF.json
docs/: coverage-strategy.md  install.md
o2-scalpel-ada/: .mcp.json  README.md
o2-scalpel-al/: .mcp.json  README.md
o2-scalpel-angular/: .mcp.json  README.md
o2-scalpel-ansible/: .mcp.json  README.md
o2-scalpel-bash/: .mcp.json  README.md
o2-scalpel-bsl/: .mcp.json  README.md
o2-scalpel-clojure/: .mcp.json  README.md
o2-scalpel-cpp/: .mcp.json  README.md
o2-scalpel-crystal/: .mcp.json  README.md
o2-scalpel-csharp/: .mcp.json  README.md
o2-scalpel-dart/: .mcp.json  README.md
o2-scalpel-elixir/: .mcp.json  README.md
o2-scalpel-elm/: .mcp.json  README.md
o2-scalpel-erlang/: .mcp.json  README.md
o2-scalpel-fortran/: .mcp.json  README.md
o2-scalpel-fsharp/: .mcp.json  README.md
o2-scalpel-go/: .mcp.json  README.md
o2-scalpel-groovy/: .mcp.json  README.md
o2-scalpel-haskell/: .mcp.json  README.md
o2-scalpel-haxe/: .mcp.json  README.md
o2-scalpel-hlsl/: .mcp.json  README.md
o2-scalpel-html/: .mcp.json  README.md
o2-scalpel-java/: .mcp.json  README.md
o2-scalpel-json/: .mcp.json  README.md
playground/python/: .gitignore  README.md  pyproject.toml
playground/python/src/calc/: __init__.py  ast.py  eval.py  parser.py
playground/python/src/lints/: __init__.py  core.py
playground/python/tests/: test_calc.py
(+847 files in other folders)
