[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "o2-scalpel-playground-python"
version = "0.1.0"
description = "Python playground workspace — o2-scalpel v1.3-C E2E fixture"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/calc", "src/lints"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
